--- a/woocommerce-gateway-checkout-com/assets/css/checkoutcom-styles.css
+++ b/woocommerce-gateway-checkout-com/assets/css/checkoutcom-styles.css
@@ -404,6 +404,7 @@
     box-shadow: 0 2px 1px -1px rgba(0,0,0,.2), 0 1px 1px 0 rgba(0,0,0,.14), 0 1px 3px 0 rgba(0,0,0,.12);
     padding-top: 0px;
     margin-top: 20px;
+    background-color: white;
 }
 
 .sepa-card-title h3 {
@@ -521,6 +522,7 @@
     margin-inline-start: 0px;
     margin-inline-end: 0px;
     margin: 16px;
+
 }
 
 .sepa-checkbox-container label {
@@ -537,7 +539,7 @@
 }
 
 .sepa-footer-title {
-    font-size: 11px;
+    font-size: 13px;
     margin: 16px;
     padding-bottom: 16px;
     text-align: center;
@@ -565,6 +567,13 @@ datalist {
 }
 
 .boleto-content {
+    padding-top: 15px;
+    padding-bottom: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
+.sepa-content {
     padding-top: 15px;
     padding-bottom: 20px;
     padding-left: 20px;
@@ -610,4 +619,28 @@ datalist {
     font-size: 17px;
     font-family: monospace;
     text-align: center;
+}
+
+#sepa-bic {
+    height:35px;
+    font-size: 17px;
+}
+#sepa-iban {
+    height:35px;
+    font-size: 17px;
+}
+
+.sepa-continue-btn {
+    text-align: center;
+}
+
+.sepa-checkbox-inner-container {
+    padding-top: 10px;
+}
+
+#sepa-continue {
+    height: 30px;
+    padding-bottom: 0px;
+    padding-top: 0px;
+    font-size: 13px;
 }
