--- a/woocommerce-gateway-checkout-com/assets/css/multi-iframe.css
+++ b/woocommerce-gateway-checkout-com/assets/css/multi-iframe.css
@@ -8,8 +8,13 @@
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 } */
 
-iframe {
-  /* This fixes a mobile Safari bug */
+.card-number-frame iframe {
+  height: 38px !important;
+}
+.expiry-date-frame iframe {
+  height: 38px !important;
+}
+.cvv-frame iframe {
   height: 38px !important;
 }
 
