--- a/assets/css/checkoutcom-styles.css
+++ b/assets/css/checkoutcom-styles.css
@@ -113,7 +113,92 @@
     }
 }
 
+.cko-co-brand-label {
+    font-size: 0.8em;
+    font-weight: 600;
+    display: none;
+}
 
+.cko-information-icon-tip {
+    content: ' ';
+    background-image: url( '../images/information.svg' );
+    position: absolute;
+    width: 16px;
+    height: 16px;
+    margin-top: 5px;
+    margin-left: 5px;
+}
+
+#tiptip_holder {
+    display: none;
+    z-index: 8675309;
+    position: absolute;
+    top: 0;
+    pointer-events: none;
+
+    /*rtl:ignore*/
+    left: 0;
+}
+
+#tiptip_holder.tip_bottom {
+    padding-top: 5px;
+}
+
+#tiptip_holder.tip_bottom #tiptip_arrow_inner {
+    margin-top: -5px;
+    margin-left: -6px;
+    border-bottom-color: #333;
+}
+
+#tiptip_holder.tip_top {
+     padding-bottom: 5px;
+
+}
+#tiptip_holder.tip_top #tiptip_arrow_inner {
+    margin-top: -7px;
+    margin-left: -6px;
+    border-top-color: #333;
+}
+
+#tiptip_holder.tip_right {
+     padding-left: 5px;
+}
+
+#tiptip_holder.tip_right #tiptip_arrow_inner {
+    margin-top: -6px;
+    margin-left: -5px;
+    border-right-color: #333;
+}
+
+#tiptip_holder.tip_left {
+     padding-right: 5px;
+}
+
+#tiptip_holder.tip_left #tiptip_arrow_inner {
+    margin-top: -6px;
+    margin-left: -7px;
+    border-left-color: #333;
+}
+
+#tiptip_content {
+    color: #fff;
+    font-size: .8em;
+    background: #333;
+    text-align: center;
+    border-radius: 3px;
+    padding: 0.618em 1em;
+    box-shadow: 0 1px 3px rgb(0 0 0 / 20%);
+}
+
+#tiptip_arrow,
+#tiptip_arrow_inner {
+    position: absolute;
+    border-color: transparent;
+    border-style: solid;
+    border-width: 6px;
+    height: 0;
+    width: 0;
+}
 
 /* Add style to the Apple and Google Pay methods to show the icons  */
 .cko-wallet-icon-spacer {
