--- a/assets/css/checkoutcom-styles.css
+++ b/assets/css/checkoutcom-styles.css
@@ -60,6 +60,7 @@
     display: inline-block;
     -webkit-appearance: -apple-pay-button;
     cursor: pointer;
+    margin-top: 15px;
 }
 .apple-pay-button-with-text > * {
     display: none;
